tests/rosetta/out/Elixir/arithmetic-geometric-mean.exs
# Generated by Mochi compiler v0.10.26 on 2025-07-16T12:45:10Z
defmodule Main do
  @spec abs(float()) :: float()
  def abs(x) do
    try do
      if x < 0 do
        throw({:return, -x})
      end

      throw({:return, x})
    catch
      {:return, v} -> v
    end
  end

  @spec sqrtApprox(float()) :: float()
  def sqrtApprox(x) do
    try do
      guess = x
      _ = guess
      i = 0
      _ = i

      t1 = fn t1, guess, i ->
        try do
          if i < 20 do
            guess = (guess + x / guess) / 2
            i = i + 1
            t1.(t1, guess, i)
          else
            {:ok, guess, i}
          end
        catch
          :break ->
            {:ok, guess, i}
        end
      end

      {_, guess, i} = t1.(t1, guess, i)
      _ = guess
      _ = i
      throw({:return, guess})
    catch
      {:return, v} -> v
    end
  end

  @spec agm(float(), float()) :: float()
  def agm(a, g) do
    try do
      eps = 0.00000000000001

      t2 = fn t2, a, g ->
        try do
          if abs(a - g) > abs(a) * eps do
            newA = (a + g) / 2
            newG = sqrtApprox(a * g)
            a = newA
            g = newG
            t2.(t2, a, g)
          else
            {:ok, a, g}
          end
        catch
          :break ->
            {:ok, a, g}
        end
      end

      {_, a, g} = t2.(t2, a, g)
      _ = a
      _ = g
      throw({:return, a})
    catch
      {:return, v} -> v
    end
  end

  @spec main() :: nil
  def main() do
    try do
      IO.puts(to_string(agm(1, 1 / sqrtApprox(2))))
    catch
      {:return, v} -> v
    end
  end

  def main do
    main()
  end
end

Main.main()
